Fixes issue with cards not showing. Sets parse to true on board model parse for nested resource.Creates list view that is called/invoked by board view.

--- a/app/assets/stylesheets/boards.css.scss
+++ b/app/assets/stylesheets/boards.css.scss
@@ -3,13 +3,3 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.listDiv {
-	background-color:lightgray;
-	width:200px;
-	height:400px;
-	display: inline-block;
-	position: relative;
-	padding: 10;
-	margin: 20;
-	border: 10;
-}
