--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the lists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.listDiv {
+	background-color:lightgray;
+	width:200px;
+	height:400px;
+	display: inline-block;
+	position: relative;
+	padding: 10;
+	margin: 20;
+	border: 10;
+}
